--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: blog
-permalink: /
+permalink: /blog
 title: Developer blog
 image: blog
 pagination:
@@ -14,7 +14,8 @@ pagination:
                header-image=post.image
                title=post.title
                authors=post.authors
-               date=post.date %}
+               date=post.date
+               url=post.url %}
   {% endfor %}
 </div>
 
