Add tagging functionality and section

--- a/_pages/search.html
+++ b/_pages/search.html
@@ -12,8 +12,9 @@ title: Search
     {% for post in site.posts %}
       "{{ post.url | slugify }}": {
         "title": "{{ post.title | xml_escape }}",
-        "authors": "{{ post.authors | join: ', ' | xml_escape }}",
         "category": "{{ post.category | xml_escape }}",
+        "tags": "{{ post.tags | join: ', ' | xml_escape }}",
+        "authors": "{{ post.authors | join: ', ' | xml_escape }}",
         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
         "url": "{{ post.url | xml_escape }}",
         "image": "{{ post.image }}",
