Style 404 page, remove search from pages, change header_position variable

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -7,3 +7,4 @@ permalink: 404.html
   <h2 class="status__title">404</h2>
   <p class="status__subtitle">Page not found</p>
 </div>
+{% include sections/footer.html %}
