--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,10 +1,13 @@
 ---
 layout: blank
 permalink: 404.html
+title: 404
+background_image: 404.jpg
 ---
 
 <div class="status">
   <h2 class="status__title">404</h2>
   <p class="status__subtitle">Page not found</p>
 </div>
+
 {% include sections/footer.html %}
