--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -28,7 +28,7 @@ header_image: devjobs.jpg
   <h2 class="section-title">Join the Force! We are developing the next generation commerce platform</h2>
   <div class="row">
     <div class="column  column-1">
-      <h3 class="section-title">Shape the ePages software with us</h3>
+      <h3 class="section-title">Shape the ePages software<br> with us</h3>
       <p class="section-body">With our online shop software a merchant receives a complete package to hit the ground running in commerce. We are constantly working on our solution to keep it up-to-date with new market developments, for example integrating new features.</p>
     </div>
     <div class="column  column-2">
@@ -40,7 +40,7 @@ header_image: devjobs.jpg
       </ul>
     </div>
     <div class="column  column-3">
-      <h3 class="section-title">Make the step: Join the ePages team</h3>
+      <h3 class="section-title">Make the step:<br> Join the ePages team</h3>
       <p class="section-body">We are looking for more dedicated developers to join our team. Bring your ideas and let's shape the next generation commerce platform together.</p>
     </div>
   </div>
@@ -48,7 +48,8 @@ header_image: devjobs.jpg
 
 <section class="story">
   <h2 class="section-title">Our story</h2>
-  <p class="section-body">We develop high performing online shop software. Established for years, we are one of the market leaders worldwide. More than 140,000 businesses use our online shop solution already.</p>
+  <p class="section-body">We develop high performing online shop software. Established for years, we are one of the market leaders worldwide.</p>
+  <p class="section-body">More than 140,000 businesses use our online shop solution already.</p>
   <p class="section-body">We love ecommerce and we always have an eye on the latest trends on the market.</p>
 </section>
 
@@ -131,11 +132,11 @@ header_image: devjobs.jpg
     </div>
     <div class="contact__option">
       <i class="fa fa-twitter" aria-hidden="true"></i>
-      <a href="https://twitter.com/epagesdevs">@epagesdevs</a>
+      <a href="https://twitter.com/epagesdevs" target="_blank">@epagesdevs</a>
     </div>
     <div class="contact__option">
       <i class="fa fa-comment" aria-hidden="true"></i>
-      <a href="/blog/">ePages DevBlog</a>
+      <a href="/blog/" target="_blank">ePages DevBlog</a>
     </div>
     <div class="contact__option">
       <i class="fa fa-black-tie" aria-hidden="true"></i>
@@ -143,7 +144,7 @@ header_image: devjobs.jpg
     </div>
     <div class="contact__option">
       <i class="fa fa-twitter" aria-hidden="true"></i>
-      <a href="https://twitter.com/netzfisch">@netzfisch</a>
+      <a href="https://twitter.com/netzfisch" target="_blank">@netzfisch</a>
     </div>
 
   </div>
