Re-style index page

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,12 +1,12 @@
 ---
-layout: blank
+layout: no-header
 permalink: /
 title: Developer portal
 background_image: index.jpg
 ---
 
 <div class="tiles">
-  <div class="tile  tile--now">
+  <div class="card  tile  tile--now">
     <div class="tile__header  tile--now__header">
       <h2 class="tile__title">ePages Now</h2>
     </div>
@@ -20,7 +20,7 @@ background_image: index.jpg
       <a href="#" class="cta  cta--now">Read docs</a>
     </div>
   </div>
-  <div class="tile  tile--beyond">
+  <div class="card  tile  tile--beyond">
     <div class="tile__header  tile--beyond__header">
       <h2 class="tile__title">ePages Beyond</h2>
     </div>
@@ -35,5 +35,3 @@ background_image: index.jpg
     </div>
   </div>
 </div>
-
-{% include sections/footer.html %}
