--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -2,8 +2,8 @@
 layout: devjobs
 permalink: /devjobs/
 title: Developer jobs
-h1: Our <span>{ </span>code<span> }</span> speaks e-commerce
-h2: Join one of the leading developer teams for online shop software
+main_title: Our <span>{</span> code <span>}</span> speaks e-commerce
+sub_title: Join one of the leading developer teams for online shop software
 header_image: devjobs.jpg
 ---
 
