Update index page

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,37 +1,60 @@
 ---
-layout: no-header
+layout: default
 permalink: /
-title: Developer portal
+header_image: main.jpg
+upper_title: Hundreds of thousands of online shops worldwide
+title: Powered by your app.
 background_image: index.jpg
 ---
 
-<div class="tiles">
-  <div class="card  tile  tile--now">
-    <div class="tile__header  tile--now__header">
-      <h2 class="tile__title">ePages Now</h2>
+<section class="section">
+
+  <p class="section__text">Share your love for app development with us and empower our merchants with amazing integrations.</p>
+  <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based eCommerce platform:</p>
+
+  <div class="tiles">
+    <div class="card  tile">
+      <div class="tile__header  tile__header--now">
+        <h2 class="tile__title">ePages Now</h2>
+      </div>
+      <div class="tile__body">
+        <p>Reach over 140.000 existing merchants worldwide:</p>
+
+        <ul class="tile__list">
+          <li>Bulletproof architecture</li>
+          <li>Seamless App Store integration</li>
+          <li>Unlimited use cases</li>
+          <li>Comprehensive global customer base</li>
+          <li><a href="#">Sign up</a> for an account</li>
+        </ul>
+
+
+        <a href="https://developer.epages.com/apps" class="tile__cta  tile__cta--now">Read docs</a>
+      </div>
     </div>
-    <div class="tile__body  tile--now__body">
-      <ul class="tile__list">
-        <li class="tile__item">3 wolf moon deep v beard roof party</li>
-        <li class="tile__item">Chartreuse humblebrag vegan pug swag</li>
-        <li class="tile__item">DIY cornhole shaman humblebrag</li>
-        <li class="tile__item">Church-key literally craft beer street art</li>
-      </ul>
-      <a href="#" class="cta  cta--now">Read docs</a>
+
+    <div class="card  tile">
+      <div class="tile__header  tile__header--beyond">
+        <h2 class="tile__title">ePages Beyond</h2>
+      </div>
+      <div class="tile__body">
+        <p>Be involved from the very start and help shape our new Commerce Cockpit:</p>
+
+        <ul class="tile__list">
+          <li>API-first approach</li>
+          <li>Microservices architecture</li>
+          <li>Open-Source powered</li>
+          <li>Complex-free &amp; flexible</li>
+          <li>Limited functionality</li>
+          <li><a href="https://signup.beyondshop.cloud/">Sign up</a> for an account</li>
+        </ul>
+
+
+        <a href="http://docs.beyondshop.cloud/" class="tile__cta  tile__cta--beyond">Read docs</a>
+      </div>
+
+      <div class="tile__flag">The ePages Lab</div>
     </div>
   </div>
-  <div class="card  tile  tile--beyond">
-    <div class="tile__header  tile--beyond__header">
-      <h2 class="tile__title">ePages Beyond</h2>
-    </div>
-    <div class="tile__body  tile--beyond__body">
-      <ul class="tile__list">
-        <li class="tile__item">Mustache microdosing meggings</li>
-        <li class="tile__item">Cloud bread VHS pabst</li>
-        <li class="tile__item">Vegan shoreditch tattooed adaptogen</li>
-        <li class="tile__item">Gluten-free vegan wayfarers</li>
-      </ul>
-      <a href="#" class="cta  cta--beyond">Read docs</a>
-    </div>
-  </div>
-</div>
+
+</section>
