--- a/_pages/index.html
+++ b/_pages/index.html
@@ -10,7 +10,7 @@ background_image: index.jpg
 <section class="section">
 
   <p class="section__text">Share your love for app development with us and empower our merchants with amazing integrations.</p>
-  <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based eCommerce platform:</p>
+  <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based ecommerce platform:</p>
 
   <div class="tiles">
     <div class="card  tile">
@@ -43,9 +43,9 @@ background_image: index.jpg
         <ul class="tile__list">
           <li>API-first approach</li>
           <li>Microservices architecture</li>
-          <li>Open-Source powered</li>
+          <li>Open-Source-powered</li>
           <li>Complex-free &amp; flexible</li>
-          <li>Limited functionality</li>
+          <li>Growing functionality</li>
           <li><a href="https://signup.beyondshop.cloud/">Sign up</a> for an account</li>
         </ul>
 
