--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -155,11 +155,13 @@ header_image: devjobs.jpg
   <div class="card--devjobs__container">
     {% assign events = site.data.events %}
     {% for event in events %}
+    <div class="card--float">
       <div class="card--devjobs">
         <h3 class="card--devjobs__title"><a target="_blank" href="{{ event.link }}">{{ event.title }}</a></h3>
         <p class="card--devjobs__body">{{ event.description }}</p>
         <p class="card--devjobs__footer">{{ event.location }}</p>
       </div>
+    </div>
     {% endfor %}
   </div>
 </section>
