--- a/_pages/search.html
+++ b/_pages/search.html
@@ -29,6 +29,6 @@ title: Search
   };
 </script>
 
-<script src="/assets/js/date-format.js"></script>
+<script src="/assets/js/date.js"></script>
 <script src="/assets/js/lunr.min.js"></script>
 <script src="/assets/js/search.js"></script>
