Change link to beyond docs

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -50,7 +50,7 @@ background_image: index.jpg
 
         <p><a href="https://signup.beyondshop.cloud/">Sign up</a> for an account</p>
 
-        <a href="http://docs.beyondshop.cloud.s3-website.eu-central-1.amazonaws.com/" class="form__cta  form__cta--green  tile__cta">Read Docs</a>
+        <a href="http://docs.beyondshop.cloud/" class="form__cta  form__cta--green  tile__cta">Read Docs</a>
       </div>
 
       <div class="tile__flag">The ePages Lab</div>
