Make external links open in new tab

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -48,9 +48,9 @@ background_image: index.jpg
           <li>Growing functionality</li>
         </ul>
 
-        <p><a href="https://signup.beyondshop.cloud/">Sign up</a> for an account</p>
+        <p><a href="https://signup.beyondshop.cloud/" target="_blank">Sign up</a> for an account</p>
 
-        <a href="http://docs.beyondshop.cloud/" class="form__cta  form__cta--green  tile__cta">Read Docs</a>
+        <a href="http://docs.beyondshop.cloud/" class="form__cta  form__cta--green  tile__cta" target="_blank">Read Docs</a>
       </div>
 
       <div class="tile__flag">The ePages Lab</div>
