Change # href to pass the tests

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -27,7 +27,7 @@ background_image: index.jpg
           <li>Comprehensive global customer base</li>
         </ul>
 
-        <p><a href="#" class="popup">Sign up</a> for an account</p>
+        <p><a href="#signup" class="popup">Sign up</a> for an account</p>
 
         <a href="https://developer.epages.com/apps/" class="form__cta  form__cta--blue  tile__cta">Read Docs</a>
       </div>
