Change old blog urls to new structure

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -29,7 +29,7 @@ background_image: index.jpg
 
         <p><a href="#signup" class="popup">Sign up</a> for an account</p>
 
-        <a href="https://developer.epages.com/apps/" class="form__cta  form__cta--blue  tile__cta">Read Docs</a>
+        <a href="/apps/" class="form__cta  form__cta--blue  tile__cta">Read Docs</a>
       </div>
     </div>
 
