--- a/_pages/index.html
+++ b/_pages/index.html
@@ -13,48 +13,37 @@ background_image: index.jpg
   <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based eCommerce platform:</p>
 
   <div class="tiles">
-    <div class="card  tile">
-      <div class="tile__header  tile__header--now">
-        <h2 class="tile__title">ePages Now</h2>
-      </div>
-      <div class="tile__body">
-        <p>Reach over 140.000 existing merchants worldwide:</p>
+    {% assign list_now = 'Bulletproof architecture, 
+                          Seamless App Store integration, 
+                          Unlimited use cases, 
+                          Comprehensive global customer base' | split: ', ' %}
 
-        <ul class="tile__list">
-          <li>Bulletproof architecture</li>
-          <li>Seamless App Store integration</li>
-          <li>Unlimited use cases</li>
-          <li>Comprehensive global customer base</li>
-        </ul>
+    {% include components/index-card.html class='now'
+                                          title='ePages Now'
+                                          body='Reach over 140.000 existing merchants worldwide:'
+                                          list=list_now
+                                          signup='#signup'
+                                          signup_target='_self'
+                                          docs='https://developer.epages.com/apps/'
+                                          docs_target='_self'
+                                          cta='Read Docs' %}
 
-        <p><a href="#" class="popup">Sign up</a> for an account</p>
+    {% assign list_beyond = 'API-first approach, 
+                             Microservices architecture, 
+                             Open-Source-powered, 
+                             Complex-free &amp; flexible, 
+                             Growing functionality' | split: ', ' %}
 
-        <a href="https://developer.epages.com/apps/" class="form__cta  form__cta--blue  tile__cta">Read Docs</a>
-      </div>
-    </div>
-
-    <div class="card  tile">
-      <div class="tile__header  tile__header--beyond">
-        <h2 class="tile__title">ePages Beyond</h2>
-      </div>
-      <div class="tile__body">
-        <p>Be involved from the very start and help shape our new Commerce Cockpit:</p>
-
-        <ul class="tile__list">
-          <li>API-first approach</li>
-          <li>Microservices architecture</li>
-          <li>Open-Source-powered</li>
-          <li>Complex-free &amp; flexible</li>
-          <li>Growing functionality</li>
-        </ul>
-
-        <p><a href="https://signup.beyondshop.cloud/">Sign up</a> for an account</p>
-
-        <a href="http://docs.beyondshop.cloud.s3-website.eu-central-1.amazonaws.com/" class="form__cta  form__cta--green  tile__cta">Read Docs</a>
-      </div>
-
-      <div class="tile__flag">The ePages Lab</div>
-    </div>
+    {% include components/index-card.html class='beyond'
+                                          title='ePages Beyond'
+                                          body='Be involved from the very start and help shape our new Commerce Cockpit:'
+                                          list=list_beyond
+                                          signup='https://signup.beyondshop.cloud/'
+                                          signup_target='_blank'
+                                          docs='http://docs.beyondshop.cloud/'
+                                          docs_target='_blank'
+                                          cta='Read Docs'
+                                          flag='The ePages Lab' %}
   </div>
 
 </section>
