Remove whitespace and indent index.js

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -13,10 +13,7 @@ background_image: index.jpg
   <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based eCommerce platform:</p>
 
   <div class="tiles">
-    {% assign list_now = 'Bulletproof architecture, 
-                          Seamless App Store integration, 
-                          Unlimited use cases, 
-                          Comprehensive global customer base' | split: ', ' %}
+    {% assign list_now = 'Bulletproof architecture, Seamless App Store integration, Unlimited use cases, Comprehensive global customer base' | split: ', ' %}
 
     {% include components/index-card.html class='now'
                                           title='ePages Now'
@@ -28,11 +25,7 @@ background_image: index.jpg
                                           docs_target='_self'
                                           cta='Read Docs' %}
 
-    {% assign list_beyond = 'API-first approach, 
-                             Microservices architecture, 
-                             Open-Source-powered, 
-                             Complex-free &amp; flexible, 
-                             Growing functionality' | split: ', ' %}
+    {% assign list_beyond = 'API-first approach, Microservices architecture, Open-Source-powered, Complex-free &amp; flexible, Growing functionality' | split: ', ' %}
 
     {% include components/index-card.html class='beyond'
                                           title='ePages Beyond'
