--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -1,7 +1,7 @@
 ---
 layout: devjobs
 permalink: /devjobs/
-title: Developer jobs
+title: DevJobs
 main_title: Our <span>{</span> code <span>}</span> speaks e-commerce
 sub_title: Join one of the leading developer teams for online shop software
 header_image: devjobs.jpg
