--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: blog
 permalink: /blog/
-title: Developer blog
+title: DevBlog
+main_title: Developer blog
 header_image: blog.jpg
 ---
