Change wording and icons

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -43,8 +43,8 @@ header_image: devjobs.jpg
           <a href="https://twitter.com/epagesdevs" target="_blank">@epagesdevs</a>
         </div>
         <div class="contact__option">
-          <i class="fa fa-comment" aria-hidden="true"></i>
-          <a href="/blog/" target="_blank">ePages DevBlog</a>
+          <i class="fa fa-rss" aria-hidden="true"></i>
+          <a href="/blog/" target="_blank">ePages Devblog</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@ header_image: devjobs.jpg
           <a href="https://twitter.com/netzfisch" target="_blank">@netzfisch</a>
         </div>
         <div class="contact__option  info">
-          <i class="fa fa-heart" aria-hidden="true"></i>
+          <i class="fa fa-comment" aria-hidden="true"></i>
           <span class="info__text">Harm shares the “bike2work” passion of many ePagees. He’s an e-commerce-addict, internet enthusiast and Ruby evangelist.</span>
         </div>
       </div>
