--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -58,8 +58,8 @@ header_image: devjobs.jpg
           <i class="fa fa-twitter" aria-hidden="true"></i>
           <a href="https://twitter.com/netzfisch" target="_blank">@netzfisch</a>
         </div>
-        <div class="contact__option  info">
-          <i class="fa fa-comment" aria-hidden="true"></i>
+        <div class="contact__option">
+          <i class="fa fa-comment fa-flip-horizontal" aria-hidden="true"></i>
           <span class="info__text">Harm shares the “bike2work” passion of many ePagees. He’s an e-commerce-addict, internet enthusiast and Ruby evangelist.</span>
         </div>
       </div>
