Made last changes on wording

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -44,7 +44,7 @@ header_image: devjobs.jpg
         </div>
         <div class="contact__option">
           <i class="fa fa-rss" aria-hidden="true"></i>
-          <a href="/blog/" target="_blank">ePages Devblog</a>
+          <a href="/blog/" target="_blank">ePages DevBlog</a>
         </div>
       </div>
     </div>
@@ -75,7 +75,7 @@ header_image: devjobs.jpg
     <div class="column  column-1">
       <i class="fa fa-code" aria-hidden="true"></i>
       <h4 class="column__title">Shape the ePages software with us</h4>
-      <p class="column__body">With our online shop software a merchant receives a complete package to hit the ground running in commerce. We are constantly working on our solution to keep it up-to-date with new market developments, for example integrating new features.</p>
+      <p class="column__body">With our online shop software, a merchant receives a complete package to hit the ground running in commerce. We are constantly working on our solution to keep it up-to-date with new market developments, for example by integrating new features.</p>
     </div>
     <div class="column  column-2">
       <i class="fa fa-cogs" aria-hidden="true"></i>
