--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -4,6 +4,8 @@ permalink: /devjobs/
 title: DevJobs
 main_title: We're hiring
 header_image: devjobs.jpg
+description: Join one of the leading developer teams for online shop software. At ePages we offer various career opportunities especially for experienced web developers.
+keywords: ["developer", "developer in Hamburg", "developer in Jena", "full time", "software developer", "web developers", "developers", "java", "frontend", "backend", "job search"]
 ---
 
 <section class="job-openings">
