--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,9 +1,8 @@
 ---
 layout: blog
 permalink: /blog/
+seo: blog
 title: DevBlog
 main_title: Developer blog
 header_image: blog.jpg
-description: Welcome to the ePages Developer Blog! We will give you insights into our daily work, share tech stories and open positions with you and much more.
-keywords: ["ePages developer blog", "developer blog", "ePages dev blog", "blog"]
 ---
