Change card style in order to match beyond design

--- a/_pages/devjobs.html
+++ b/_pages/devjobs.html
@@ -27,7 +27,7 @@ header_image: devjobs.jpg
 <section class="contact">
   <h2 class="section__title">Get in touch with us!</h2>
   <p class="section__body">Find out more about your career opportunities at ePages.</p>
-  <div class="contact-wrapper">
+  <div class="card  contact-wrapper">
     <div class="contact-wrapper--inner  contact-wrapper--left">
       <div class="contact__group-1">
         <div class="contact__option">
@@ -71,7 +71,7 @@ header_image: devjobs.jpg
 <section class="about">
   <img src="/assets/img/pages/jobs/devs-logo.svg" alt="ePages Developer Logo" class="developer-logo">
   <h2 class="section__title">Join the Force!</h2>
-  <div class="column-wrapper">
+  <div class="card  column-wrapper">
     <div class="column  column-1">
       <i class="fa fa-code" aria-hidden="true"></i>
       <h4 class="column__title">Shape the ePages software with us</h4>
