--- a/_pages/index.html
+++ b/_pages/index.html
@@ -2,43 +2,86 @@
 layout: default
 permalink: /
 header_image: main.jpg
-upper_title: Hundreds of thousands of online shops worldwide
-title: Powered by your app.
+title: The next generation ecommerce infrastructure
+sub_title: Are you ready for take off?
 background_image: index.jpg
 ---
 
-<section class="section">
-
-  <p class="section__text  section__text--margin-bottom">Share your love for app development with us and empower our merchants with amazing integrations.</p>
-  <p class="section__text">Explore the ePages REST APIs tailored for our cloud-based eCommerce platform:</p>
-
-  <div class="tiles">
-    {% assign list_now = 'Bulletproof architecture, Seamless App Store integration, Unlimited use cases, Comprehensive global customer base' | split: ', ' %}
-
-    {% include components/index-card.html class='now'
-                                          title='ePages Now'
-                                          body='Reach over 140.000 existing merchants worldwide:'
-                                          list=list_now
-                                          signup='#signup'
-                                          signup_target='_self'
-                                          docs='https://developer.epages.com/apps/'
-                                          docs_target='_self'
-                                          cta='Read Docs' %}
-
-    {% assign list_beyond = 'API-first approach, Microservices architecture, Open-Source-powered, Complex-free &amp; flexible, Growing functionality' | split: ', ' %}
-
-    {% include components/index-card.html class='beyond'
-                                          title='ePages Beyond'
-                                          body='Be involved from the very start and help shape our new Commerce Cockpit:'
-                                          list=list_beyond
-                                          signup='https://signup.beyondshop.cloud/'
-                                          signup_target='_blank'
-                                          docs='http://docs.beyondshop.cloud/'
-                                          docs_target='_blank'
-                                          cta='Read Docs'
-                                          flag='The ePages Lab' %}
+<section class="intro">
+  <div class="card  column-wrapper">
+    <div class="column  column-1">
+      <i class="fa fa-connectdevelop" aria-hidden="true"></i>
+      <h4 class="column-title">API first</h4>
+      <p class="column-body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, provising a sound basis to build an awesome product on top of it.</p>
+    </div>
+    <div class="column  column-2">
+      <i class="fa fa-cubes" aria-hidden="true"></i>
+      <h4 class="column-title">Microservices architecture</h4>
+      <p class="column-body">We are developing for the cloud. That's why we've established an ecosystem of microservices for our highly scalable and flexible ecommerce platform.</p>
+    </div>
+    <div class="column  column-3">
+      <i class="fa fa-line-chart" aria-hidden="true"></i>
+      <h4 class="column-title">Growing functionality</h4>
+      <p class="column-body">BEYOND covers already a whole ecommerce infrastructure, and the functionality is ever growing! Be involved from the very start, and help shape our ecommerce platform.</p>
+    </div>
+    <div class="column  column-4">
+      <i class="fa fa-heart" aria-hidden="true"></i>
+      <h4 class="column-title">Build apps with love</h4>
+      <p class="column-body">Share your love for app development with us. Build apps in your language of choice, and empower our merchants with amazing integrations.</p>
+    </div>
   </div>
+</section>
 
+<section class="steps">
+  <div class="card  column-wrapper">
+    <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
+    <div class="column  column-1">
+      <i class="fa fa-book" aria-hidden="true"></i>
+      <h4 class="column-title">Get started</h4>
+      <p class="column-body">Learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
+      <a href="" class="cta  cta--beyond">Read docs</a>
+    </div>
+    <div class="column  column-2">
+      <i class="fa fa-code" aria-hidden="true"></i>
+      <h4 class="column-title">Develop your app</h4>
+      <p class="column-body">Sign up for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
+      <a href="" class="cta  cta--beyond">Sign up</a>
+    </div>
+    <div class="column  column-3">
+      <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+      <h4 class="column-title">Launch it!</h4>
+      <p class="column-body">Once your app is tried and tested, let us know, and we clear the way for it's publication in our store!</p>
+    </div>
+  </div>
+</section>
+
+<section class="about">
+  <div class="card  column-wrapper">
+    <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
+    <div class="column  column-1">
+      <i class="fa fa-rocket" aria-hidden="true"></i>
+    </div>
+    <div class="column  column-2">
+      <h2 class="section__title">Innovative platform packed with powerful ecommerce features</h2>
+      <p class="section__body">With BEYOND, our customers can draw from the full source of ecommerce! Be it controlling different commerce channels, integrating with Website Builders, or creating an efficient connection of ERP and ecommerce - BEYOND means successful business!</p>
+    </div>
+  </div>
+</section>
+
+<section class="news">
+  <div class="carousel">
+    <div class="carousel__item  carousel__item-1">your content</div>
+    <div class="carousel__item  carousel__item-2">your content</div>
+    <div class="carousel__item  carousel__item-3">your content</div>
+  </div>
+</section>
+
+<section class="more">
+  <div class="card">
+    <h2 class="section__title">More REST API docs</h2>
+    <p class="section__body">If you're developing for our Now and Base platform, here's the REST documentation you'll need:</p>
+    <a href="/apps/" class="cta  cta--now">Read docs</a>
+  </div>
 </section>
 
 <link rel="stylesheet" href="/assets/css/magnific-popup.css">
