--- a/_pages/index.html
+++ b/_pages/index.html
@@ -11,23 +11,23 @@ background_image: index.jpg
   <div class="card  column-wrapper">
     <div class="column  column-1">
       <i class="fa fa-connectdevelop" aria-hidden="true"></i>
-      <h4 class="column-title">API first</h4>
-      <p class="column-body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, provising a sound basis to build an awesome product on top of it.</p>
+      <h4 class="column__title">API first</h4>
+      <p class="column__body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, provising a sound basis to build an awesome product on top of it.</p>
     </div>
     <div class="column  column-2">
       <i class="fa fa-cubes" aria-hidden="true"></i>
-      <h4 class="column-title">Microservices architecture</h4>
-      <p class="column-body">We are developing for the cloud. That's why we've established an ecosystem of microservices for our highly scalable and flexible ecommerce platform.</p>
+      <h4 class="column__title">Microservices architecture</h4>
+      <p class="column__body">We are developing for the cloud. That's why we've established an ecosystem of microservices for our highly scalable and flexible ecommerce platform.</p>
     </div>
     <div class="column  column-3">
       <i class="fa fa-line-chart" aria-hidden="true"></i>
-      <h4 class="column-title">Growing functionality</h4>
-      <p class="column-body">BEYOND covers already a whole ecommerce infrastructure, and the functionality is ever growing! Be involved from the very start, and help shape our ecommerce platform.</p>
+      <h4 class="column__title">Growing functionality</h4>
+      <p class="column__body">BEYOND covers already a whole ecommerce infrastructure, and the functionality is ever growing! Be involved from the very start, and help shape our ecommerce platform.</p>
     </div>
     <div class="column  column-4">
       <i class="fa fa-heart" aria-hidden="true"></i>
-      <h4 class="column-title">Build apps with love</h4>
-      <p class="column-body">Share your love for app development with us. Build apps in your language of choice, and empower our merchants with amazing integrations.</p>
+      <h4 class="column__title">Build apps with love</h4>
+      <p class="column__body">Share your love for app development with us. Build apps in your language of choice, and empower our merchants with amazing integrations.</p>
     </div>
   </div>
 </section>
@@ -37,27 +37,26 @@ background_image: index.jpg
     <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
     <div class="column  column-1">
       <i class="fa fa-book" aria-hidden="true"></i>
-      <h4 class="column-title">Get started</h4>
-      <p class="column-body">Learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
-      <a href="" class="cta  cta--beyond">Read docs</a>
+      <h4 class="column__title">Get started</h4>
+      <p class="column__body">Learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
+      <a href="http://docs.beyondshop.cloud/" class="cta  cta--beyond  cta--absolute">Read docs</a>
     </div>
     <div class="column  column-2">
       <i class="fa fa-code" aria-hidden="true"></i>
-      <h4 class="column-title">Develop your app</h4>
-      <p class="column-body">Sign up for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
-      <a href="" class="cta  cta--beyond">Sign up</a>
+      <h4 class="column__title">Develop your app</h4>
+      <p class="column__body">Sign up for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
+      <a href="https://signup.beyondshop.cloud/" class="cta  cta--beyond  cta--absolute">Sign up</a>
     </div>
     <div class="column  column-3">
       <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-      <h4 class="column-title">Launch it!</h4>
-      <p class="column-body">Once your app is tried and tested, let us know, and we clear the way for it's publication in our store!</p>
+      <h4 class="column__title">Launch it!</h4>
+      <p class="column__body">Once your app is tried and tested, let us know, and we clear the way for it's publication in our store!</p>
     </div>
   </div>
 </section>
 
 <section class="about">
   <div class="card  column-wrapper">
-    <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
     <div class="column  column-1">
       <i class="fa fa-rocket" aria-hidden="true"></i>
     </div>
@@ -69,11 +68,26 @@ background_image: index.jpg
 </section>
 
 <section class="news">
-  <div class="carousel">
-    <div class="carousel__item  carousel__item-1">your content</div>
-    <div class="carousel__item  carousel__item-2">your content</div>
-    <div class="carousel__item  carousel__item-3">your content</div>
-  </div>
+    <h2 class="section__title">What's new?</h2>
+    <p class="section__body">We're constantly pushing the latest topics which currently matter in the tech business. See what we're up to right now, by checking our latest blog posts below.</p>
+    <div class="carousel">
+      {% for post in site.posts limit:5 %}
+        <div class="carousel__item">
+            {% include components/post-card.html
+              category=post.category
+              header_image=post.header_image
+              title=post.title
+              authors=post.authors
+              date=post.date
+              url=post.url %}
+        </div>
+      {% endfor %}
+      <div class="carousel__item  carousel__item-6">
+        <div class="card--post">
+            <a href="/blog/">Check out the developer blog ›</a>
+        </div>
+      </div>
+    </div>
 </section>
 
 <section class="more">
@@ -84,8 +98,9 @@ background_image: index.jpg
   </div>
 </section>
 
-<link rel="stylesheet" href="/assets/css/magnific-popup.css">
-<script src="/assets/js/jquery.magnific-popup.min.js"></script>
+<!-- <link rel="stylesheet" href="/assets/css/magnific-popup.css">
+<script src="/assets/js/jquery.magnific-popup.min.js"></script> -->
+<script src="/assets/slick/slick.min.js"></script>
 <script src="/assets/js/index.js"></script>
 
-<iframe id="frame--epages-now" style="display: none;" name="frame--epages-now" frameborder="0" allowtransparency="true" width="900px" height="720px"></iframe>
+<!-- <iframe id="frame--epages-now" style="display: none;" name="frame--epages-now" frameborder="0" allowtransparency="true" width="900px" height="720px"></iframe> -->
