--- a/_pages/about.html
+++ b/_pages/about.html
@@ -20,27 +20,39 @@ header_image: about.jpg
 
   </div>
 
-</section>
-
-
-
-
-
-<section class="more">
-
   <div class="card">
 
-    <h2 class="card__title">Find out more...</h2>
+      <h2 class="card__title">Find out more...</h2>
 
-    <!-- Twitter and YouTube reference goes here-->
+      <div class="panels">
 
-    <p class="card__body">
-      <i class="fa fa-globe" aria-hidden="true"></i>
-      <a href="https://www.epages.com">www.epages.com</a>
-      <span> (Company website)</span>
-    </p>
+        <div class="panel  panel--twitter">
+          <a href="#">
+            <div class="panel-wrap">
+              <i class="fa  fa-twitter" aria-hidden="true"></i>
+              Follow us on Twitter
+            </div>
+          </a>
+        </div>
 
-  </div>
+        <div class="panel  panel--youtube">
+          <a href="#">
+            <div class="panel-wrap">
+              <i class="fa  fa-youtube" aria-hidden="true"></i>
+              Watch our Dev videos on Youtube
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+      <p class="card__footer">
+        <i class="fa  fa-globe" aria-hidden="true"></i>
+        <a href="https://www.epages.com">www.epages.com</a>
+        <span> (Company website)</span>
+      </p>
+
+    </div>
 
 </section>
 
