--- a/_pages/about.html
+++ b/_pages/about.html
@@ -12,10 +12,12 @@ header_image: about.jpg
 
     <h2 class="card__title">Who we are</h2>
 
-    <p class="card__body">Lorem</p>
+    <p class="card__body">As a team of software developers, designers, UX experts, technical writers and scrum masters we are a group of creative minds that strives to provide our customers with a great online shop software.</p>
+
+    <p class="card__body">Our developer portal is a platform from developers for developers, and comprises a combination of REST API documentation for our products, blog posts with topics from our tech stack, as well as job vacancies.</p>
 
     <p class="card__footer">
-      <a href="/devjobs/">Find new working adventures as an ePages Dev ›</a>
+      <a href="/devjobs/">Jump into a new adventure and become an ePages Dev ›</a>
     </p>
 
   </div>
@@ -62,9 +64,9 @@ header_image: about.jpg
 
 <section class="events">
 
-  <h2 class="section__title">Behind every motivated tech team is a nice working atmosphere with cool events</h2>
+  <h2 class="section__title">Great team - Great events!</h2>
 
-  <p class="section__body">Lorem</p>
+  <p class="section__body">Pictures say more than words: Take a sneak peek at some of the videos and pictures we collected from recent events.</p>
 
   <div class="carousel  js-carousel--about">
 
@@ -73,18 +75,22 @@ header_image: about.jpg
 
       <div class="carousel__item">
 
-        <div class="card  card--event">
-          {% if ev.video %}
-            <div class="card--event__play-icon">
-              <i class="fa fa-play" aria-hidden="true"></i>
+        {% if ev.video %}<a href="{{ ev.video }}" style="display: block;">{% endif %}
+
+          <div class="card  card--event">
+            {% if ev.video %}
+              <div class="card--event__play-icon">
+                <i class="fa fa-play" aria-hidden="true"></i>
+              </div>
+            {% endif %}
+            <div class="card--event__image" style="background-image: url('/assets/img/pages/about/{{ ev.image }}');"></div>
+            <div class="card--event__body">
+              <h4 class="card--event__title">{{ ev.title }}</h4>
+              <div class="card--event__date">{{ ev.date }}</div>
             </div>
-          {% endif %}
-          <div class="card--event__image" style="background-image: url('/assets/img/pages/about/{{ ev.image }}');"></div>
-          <div class="card--event__body">
-            <h4 class="card--event__title">{{ ev.title }}</h4>
-            <div class="card--event__date">{{ ev.date }}</div>
           </div>
-        </div>
+
+        </a>
 
       </div>
 
@@ -107,7 +113,7 @@ header_image: about.jpg
 
   <h2 class="section__title">Let's meet!</h2>
 
-  <p class="section__body">We are exhibiting at many techy events. Get in touch with us!</p>
+  <p class="section__body">We're at various conferences, meetups and job fairs throughout the year. Get in touch with us!</p>
 
   <div class="card-container  card-container--exhibition">
 
@@ -117,13 +123,25 @@ header_image: about.jpg
       <div class="card--float">
 
         <div class="card  card--exhibition">
+
           <a target="_blank" href="{{ event.link }}">
-            <div class="card--exhibition__date       ">{{ ex.date }}</div>
-            <div class="card--exhibition__title      ">{{ ex.title }}</div>
-            <div class="card--exhibition__description">{{ ex.description }}</div>
-            <div class="card--exhibition__time       ">{{ ex.time }}</div>
-            <div class="card--exhibition__address    ">{{ ex.address }}</div>
+
+            <div class="card--exhibition__upper">
+              <div class="card--exhibition__date       ">{{ ex.date }}</div>
+              <div class="spacer-1"></div>
+              <div class="card--exhibition__title      ">{{ ex.title }}</div>
+              <div class="spacer-1"></div>
+              <div class="card--exhibition__time       ">{{ ex.time }}</div>
+            </div>
+
+            <div class="card--exhibition__lower">
+              <div class="card--exhibition__description">{{ ex.description }}</div>
+              <div class="spacer-1"></div>
+              <div class="card--exhibition__address    ">{{ ex.address }}</div>
+            </div>
+
           </a>
+
         </div>
 
       </div>
