Change wording and improve responsiveness

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -50,7 +50,7 @@ background_image: index.jpg
     <div class="column  column-3">
       <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
       <h4 class="column__title">Launch it!</h4>
-      <p class="column__body">Once your app is tried and tested, let us know, and we clear the way for it's publication in our store!</p>
+      <p class="column__body">Once your app is tried and tested, let us know, and we clear the way for its publication in our store!</p>
     </div>
   </div>
 </section>
@@ -68,8 +68,8 @@ background_image: index.jpg
 </section>
 
 <section class="news">
-    <h2 class="section__title">What's new?</h2>
-    <p class="section__body">We're constantly pushing the latest topics which currently matter in the tech business. See what we're up to right now, by checking our latest blog posts below.</p>
+    <h2 class="section__title">Tech News</h2>
+    <p class="section__body">We regularly share knowledge about the latest topics, and challenges that drive our work. See what we're up to, and check out our latest blog posts:</p>
     <div class="carousel">
       {% for post in site.posts limit:5 %}
         <div class="carousel__item">
@@ -84,7 +84,7 @@ background_image: index.jpg
       {% endfor %}
       <div class="carousel__item">
         <div class="card--post  carousel__link">
-            <a href="/blog/">Check out the developer blog ›</a>
+            <a href="/blog/">More posts ›</a>
         </div>
       </div>
     </div>
