Implement UX feedback

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /
 header_image: main.jpg
-title: The next generation ecommerce infrastructure
+title: The next generation <br>ecommerce infrastructure
 sub_title: Are you ready for take off?
 background_image: index.jpg
 ---
@@ -10,22 +10,22 @@ background_image: index.jpg
 <section class="intro">
   <div class="card  column-wrapper">
     <div class="column  column-1">
-      <i class="fa fa-connectdevelop" aria-hidden="true"></i>
+      <i class="fas fa-plug  fa-3x" aria-hidden="true"></i>
       <h4 class="column__title">API first</h4>
       <p class="column__body">Our ultimate aim is a developer-friendly REST API. That's why we've designed the BEYOND API first, provising a sound basis to build an awesome product on top of it.</p>
     </div>
     <div class="column  column-2">
-      <i class="fa fa-cubes" aria-hidden="true"></i>
+      <i class="fas fa-cubes  fa-3x" aria-hidden="true"></i>
       <h4 class="column__title">Microservices architecture</h4>
       <p class="column__body">We are developing for the cloud. That's why we've established an ecosystem of microservices for our highly scalable and flexible ecommerce platform.</p>
     </div>
     <div class="column  column-3">
-      <i class="fa fa-line-chart" aria-hidden="true"></i>
+      <i class="fas fa-chart-line  fa-3x" aria-hidden="true"></i>
       <h4 class="column__title">Growing functionality</h4>
       <p class="column__body">BEYOND covers already a whole ecommerce infrastructure, and the functionality is ever growing! Be involved from the very start, and help shape our ecommerce platform.</p>
     </div>
     <div class="column  column-4">
-      <i class="fa fa-heart" aria-hidden="true"></i>
+      <i class="fas fa-heart  fa-3x" aria-hidden="true"></i>
       <h4 class="column__title">Build apps with love</h4>
       <p class="column__body">Share your love for app development with us. Build apps in your language of choice, and empower our merchants with amazing integrations.</p>
     </div>
@@ -36,19 +36,17 @@ background_image: index.jpg
   <div class="card  column-wrapper">
     <h2 class="section__title">Empower online businesses worldwide with your app:</h2>
     <div class="column  column-1">
-      <i class="fa fa-book" aria-hidden="true"></i>
+      <i class="fas  fa-book  fa-3x  fa-fw" aria-hidden="true"></i>
       <h4 class="column__title">Get started</h4>
-      <p class="column__body">Learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
-      <a href="http://docs.beyondshop.cloud/" class="cta  cta--beyond  cta--absolute" target="_blank">Read docs</a>
+      <p class="column__body"><a href="http://docs.beyondshop.cloud/" target="_blank">Read the docs</a> and learn about the BEYOND API, and get inspired by the possibilities it offers.</p>
     </div>
     <div class="column  column-2">
-      <i class="fa fa-code" aria-hidden="true"></i>
+      <i class="fas  fa-code  fa-3x  fa-fw" aria-hidden="true"></i>
       <h4 class="column__title">Develop your app</h4>
-      <p class="column__body">Sign up for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
-      <a href="https://signup.beyondshop.cloud/" class="cta  cta--beyond  cta--absolute" target="_blank">Sign up</a>
+      <p class="column__body"><a href="https://signup.beyondshop.cloud/" target="_blank">Sign up for free</a> for a BEYOND shop, get yourself a token in the Developer area, and start developing your app.</p>
     </div>
     <div class="column  column-3">
-      <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+      <i class="fas  fa-paper-plane  fa-3x  fa-fw" aria-hidden="true"></i>
       <h4 class="column__title">Launch it!</h4>
       <p class="column__body">Once your app is tried and tested, let us know, and we clear the way for its publication in our store!</p>
     </div>
@@ -58,10 +56,10 @@ background_image: index.jpg
 <section class="about">
   <div class="card  column-wrapper">
     <div class="column  column-1">
-      <i class="fa fa-rocket" aria-hidden="true"></i>
+      <i class="fas  fa-rocket  fa-3x" aria-hidden="true"></i>
     </div>
     <div class="column  column-2">
-      <h2 class="section__title">Innovative platform packed with powerful ecommerce features</h2>
+      <h2 class="section__title">Innovative ecommerce platform</h2>
       <p class="section__body">With BEYOND, our customers can draw from the full source of ecommerce! Be it controlling different commerce channels, integrating with Website Builders, or creating an efficient connection of ERP and ecommerce - BEYOND means successful business!</p>
     </div>
   </div>
@@ -95,11 +93,8 @@ background_image: index.jpg
 </section>
 
 <section class="more">
-  <div class="card">
-    <h2 class="section__title">More REST API docs</h2>
-    <p class="section__body">If you're developing for our Now and Base platform, here's the REST documentation you'll need:</p>
-    <a href="/apps/" class="cta  cta--now">Read docs</a>
-  </div>
+  <h2 class="section__title">More REST API docs</h2>
+  <p class="section__body">If you're developing for our Now and Base platform, <a href="/apps/">here's the REST documentation you'll need</a>.</p>
 </section>
 
 <script src="/assets/slick/slick.min.js"></script>
